dont setup aliases yet

--- a/templates/aliases.erb
+++ b/templates/aliases.erb
@@ -1,7 +1,7 @@
-<%-
-	aliases = scope.lookupvar "postfix::config::aliases"
-
-	aliases.each { |key,value| %>
-	<%= key %>: <%= value %>
-	<% }
--%>
+#<%-
+#	aliases = scope.lookupvar "postfix::config::aliases"
+#
+#	aliases.each { |key,value| %>
+#	<%= key %>: <%= value %>
+#	<% }
+#-%>
